<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/badassBlue"
    tools:context="com.example.prathamdesai13.gamecentre.SlidingTiles">

    <TextView
        android:id="@+id/GameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="43dp"
        android:layout_marginTop="34dp"
        android:gravity="center"
        android:text="@string/greeting"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/badassGreen"
        android:textSize="30sp" />

    <Button
        android:id="@+id/StartButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/GameText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:text="@string/new_game" />

    <Button
        android:id="@+id/LoadBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="36dp"
        android:text="@string/load_background" />

    <Button
        android:id="@+id/LoadButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/GameText"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="-120dp"
        android:layout_toStartOf="@+id/StartButton"
        android:text="@string/load_saved_game" />

    <Button
        android:id="@+id/ComplexityButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/StartButton"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="-4dp"
        android:layout_marginBottom="191dp"
        android:text="@string/choose_complexity" />



    <Button
        android:id="@+id/ScoreButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/StartButton"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-10dp"
        android:layout_marginBottom="117dp"
        android:text="@string/scoreboard" />

</RelativeLayout>