<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.prathamdesai13.gamecentre.GameActivity">

    <com.example.prathamdesai13.gamecentre.GestureDetectGridView
        android:id="@+id/grid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        tools:context="com.example.prathamdesai13.gamecentre.GameActivity" />

    <Button
        android:id="@+id/UndoButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="2dp"
        android:text="@string/undo" />

    <TextView
        android:id="@+id/MoveCount"
        android:layout_width="128dp"
        android:layout_height="40dp"
        android:layout_above="@+id/UndoButton"
        android:layout_alignParentStart="true"
        android:layout_marginStart="205dp"
        android:layout_marginBottom="-2dp"
        android:text="@string/move_count"
        android:textColor="@color/badassGreen"
        android:textSize="24sp" />

    <Button
        android:id="@+id/SaveButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/UndoButton"
        android:layout_marginStart="20dp"
        android:layout_marginTop="191dp"
        android:layout_marginBottom="-52dp"
        android:text="@string/save_game" />

    <TextView
        android:id="@+id/UserScore"
        android:layout_width="128dp"
        android:layout_height="40dp"
        android:layout_above="@+id/UndoButton"
        android:layout_alignParentStart="true"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="1dp"
        android:text="Score: "
        android:textColor="@color/badassBlue"
        android:textSize="24sp" />

</RelativeLayout>
